# ETH-VisionAlgorithmsMobileRobotics

./: .gitattributes  .gitlab-ci.yml  README.md
VisualOdometryPipeline/: CMakeLists.txt  Dockerfile  README.md  example.cpp  plot.py
VisualOdometryPipeline/data/kitti05/: K.txt
VisualOdometryPipeline/data/malaga/: K.txt
VisualOdometryPipeline/include/: dataloader.hpp  map.hpp  slam.hpp  utils.hpp  viewer.hpp
VisualOdometryPipeline/src/: dataloader.cpp  main.cpp  map.cpp  slam.cpp  utils.cpp  viewer.cpp
